[metadata]
name = rainbowcsv
version = 1.0.2
description = Show csv in rainbow colors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dannysepler/rainbowcsv
author = Danny Sepler
author_email = dannysepler@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/dannysepler/rainbowcsv/issues

[options]
packages = find:
install_requires =
    colorama
    fire
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    rainbowcsv = rainbowcsv.__main__:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[isort]
profile = django
extra_standard_library = _csv
